--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: nested_navigation_gorouter_example
 description: A new Flutter project.
 
+
 publish_to: 'none' 
 version: 1.0.0+1
 
@@ -13,6 +14,7 @@ dependencies:
   go_router: ^10.0.0
   cupertino_icons: ^1.0.5
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter  
@@ -20,3 +22,7 @@ dev_dependencies:
 
 flutter:  
   uses-material-design: true
+  assets:
+  - assets/authors_data.json
+  - assets/books_data.json
+
